fix contacts icon alignment

--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -87,6 +87,7 @@ form
     height: 100%
     width: 100%
     font-size: 18px
+    font-weight: 500
     transition: background .5s ease
 
 .submit-span:hover #send-button, .submit-span:hover #reset-button
@@ -139,19 +140,19 @@ form
 
 #facebook::after
     content: "Facebook"
-    margin-left: -42px
+    margin-left: -48px
 
 #instagram::after
     content: "Instagram"
-    margin-left: -45px
+    margin-left: -50px
 
 #linkedin::after
     content: "LinkedIn"
-    margin-left: -35px
+    margin-left: -42px
 
 #github::after
     content: "GitHub"
-    margin-left: -32px
+    margin-left: -37px
 
 //after hover displays
 .icon-span:hover::after
